--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -1,9 +1,144 @@
-{% extends "base.html" %}
-{% block title %}Об авторе проекта{% endblock %}
+<!DOCTYPE html>
+{% include 'includes/header.html' %}
 {% block content %}
-<h1>Привет, я автор</h1>
-<p>
-  Тут я размещу информацию о себе используя свои умения верстать.
-  Картинки, блоки, элементы бустрап. А может быть, просто напишу несколько абзацев текста. 
-</p>
-{% endblock %} 
+    <html>
+      <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Об Авторе</title>
+    
+        <link rel="stylesheet" href="/static/css/bootstrap.css">
+        <link rel="stylesheet" href="/static/css/base.css">
+      </head>
+      <body>
+        <div class="jumbotron">
+          <div class="container">
+            <!-- row 1 -->
+            <div class="row">
+
+              <header class="col-md-12">
+
+                <h1>Тут я размещу информацию о себе используя свои умения верстать.
+                  Картинки, блоки, элементы бустрап. А может быть, просто напишу несколько абзацев текста. </h1>
+                <a class="btn btn-default btn-lg" href="#" role="button">Link</a>
+              </header>
+            </div>
+          </div>
+        </div>
+    
+        <div class="container">
+          <!-- row 2 -->
+          <div class="row">
+            <div class="col-md-offset-4 col-md-4">
+              <h3>
+                Some text with <small>secondary text</small>
+              </h3>
+            </div>
+            <div class="col-md-4">
+              <h3>
+                Add to your favorites
+                <small>
+                  <kbd><kbd>ctrl</kbd> + <kbd>d</kbd></kbd>
+                </small>
+              </h3>
+            </div>
+          </div>
+    
+          <div class="row">
+            <!-- row 3 -->
+            <div class="col-md-4">
+              <pre>&lt;p&gt;I love programming!&lt;/p&gt;
+    &lt;p&gt;This paragraph is on my landing page&lt;/p&gt;
+    &lt;br/&gt;
+    &lt;br/&gt;
+    &lt;p&gt;Bootstrap by example&lt;/p&gt;
+              </pre>
+            </div>
+            <div class="col-md-8">
+              <img src="/static/imgs/me.jpg" class="img-responsive">
+            </div>
+          </div>
+    
+          <div class="row">
+            <div class="col-md-3">
+              <img src="/static/imgs/bs.png" class="img-responsive">
+            </div>
+            <div class="col-md-6">
+              <blockquote>
+                <p>Здесь можно написать большой текст о том где и когда это фотография сделана</p>
+                <footer>Но не будем раскрывать секреты <cite title="Source Title">Пока</cite></footer>
+              </blockquote>
+            </div>
+            <div class="col-md-3">
+              <img src="/static/imgs/packt.png" class="img-responsive">
+            </div>
+          </div>
+    
+          <div class="row">
+            <div class="col-md-3">
+              <p class="text-left"><code>&lt;Left&gt;</code></p>
+            </div>
+            <div class="col-md-3">
+              <p class="text-center">Center</p>
+            </div>
+            <div class="col-md-3">
+              <p class="text-justify">Justify</p>
+            </div>
+            <div class="col-md-3">
+              <p class="text-right">Right</p>
+            </div>
+          </div>
+    
+          <div class="row">
+            <div class="col-md-3">
+              <h3>Lowercase</h3>
+              <p class="text-lowercase">ЗДесь будет просто текст что бы проверить функцию lowercase</p>
+            </div>
+            <div class="col-md-6">
+              <div class="row">
+                <div class="col-md-6">
+                  <h3>Uppercase</h3>
+                  <p class="text-uppercase">ЗДесь будет просто текст что бы проверить функцию uppercase</p>
+                </div>
+                <div class="col-md-6">
+                  <h3>Capitalize</h3>
+                  <p class="text-capitalize">ЗДесь будет просто текст что бы проверить функцию capitalize</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <h3>Strong and italic</h3>
+              <p><strong>ЗДесь будет просто текст </strong> что бы проверить функцию <em>выделения</em>, и курсива <em>ок</em>.</p>
+            </div>
+          </div>
+    
+          <footer class="row jumbotron">
+            <div class="col-md-2">
+              <img src="/static/img/logo.png" class="img-responsive">
+            </div>
+            <div class="col-md-7">
+              <ul class="list-inline list-unstyled">
+                <li><a href="#">Yatube</a></li>
+                <li><a href="#">Old projects</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Bootstrap</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </div>
+            <div class="col-md-3">
+              <address>
+                <strong>Nikolai Prokhorov.</strong><br>
+                Default city<br>
+                Litovsky blvrd<br>
+                <abbr title="Phone">P:</abbr> (495) 456-7890
+              </address>
+            </div>
+          </footer>
+        </div>
+    
+        <script src="/static/js/jquery-1.11.3.js"></script>
+        <script src="/static/js/bootstrap.js"></script>
+      </body>
+    </html>
+{% endblock %}
