--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -25,7 +25,7 @@
                 Автор: {{ post.author.get_full_name }}
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center">
-              Всего постов автора:  <span >{{ post_all }}</span>
+              Всего постов автора:  <span >{{ post_all.count }}</span>
             </li>
             <li class="list-group-item">
               <a href="{% url 'posts:profile' post.author%}">
