--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-{% include 'includes/header.html' %}
+{% extends "base.html" %}
+{% block title %}About author{% endblock %}
 {% block content %}
-    <html>
       <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,17 +16,14 @@
           <div class="container">
             <!-- row 1 -->
             <div class="row">
-
               <header class="col-md-12">
-
                 <h1>Тут я размещу информацию о себе используя свои умения верстать.
                   Картинки, блоки, элементы бустрап. А может быть, просто напишу несколько абзацев текста. </h1>
                 <a class="btn btn-default btn-lg" href="#" role="button">Link</a>
               </header>
             </div>
           </div>
-        </div>
-    
+        </div>    
         <div class="container">
           <!-- row 2 -->
           <div class="row">
@@ -43,8 +40,7 @@
                 </small>
               </h3>
             </div>
-          </div>
-    
+          </div>    
           <div class="row">
             <!-- row 3 -->
             <div class="col-md-4">
@@ -58,8 +54,7 @@
             <div class="col-md-8">
               <img src="/static/imgs/me.jpg" class="img-responsive">
             </div>
-          </div>
-    
+          </div>   
           <div class="row">
             <div class="col-md-3">
               <img src="/static/imgs/bs.png" class="img-responsive">
@@ -73,8 +68,7 @@
             <div class="col-md-3">
               <img src="/static/imgs/packt.png" class="img-responsive">
             </div>
-          </div>
-    
+          </div>  
           <div class="row">
             <div class="col-md-3">
               <p class="text-left"><code>&lt;Left&gt;</code></p>
@@ -88,8 +82,7 @@
             <div class="col-md-3">
               <p class="text-right">Right</p>
             </div>
-          </div>
-    
+          </div>  
           <div class="row">
             <div class="col-md-3">
               <h3>Lowercase</h3>
@@ -111,8 +104,7 @@
               <h3>Strong and italic</h3>
               <p><strong>ЗДесь будет просто текст </strong> что бы проверить функцию <em>выделения</em>, и курсива <em>ок</em>.</p>
             </div>
-          </div>
-    
+          </div>   
           <footer class="row jumbotron">
             <div class="col-md-2">
               <img src="/static/img/logo.png" class="img-responsive">
@@ -135,10 +127,8 @@
               </address>
             </div>
           </footer>
-        </div>
-    
+        </div>  
         <script src="/static/js/jquery-1.11.3.js"></script>
         <script src="/static/js/bootstrap.js"></script>
       </body>
-    </html>
 {% endblock %}
